workspace_1.8.0/.metadata/.plugins/org.eclipse.cdt.ui/TEST1.build.log
11:08:36 **** Build of configuration Debug for project TEST1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:26:32: error: 'user_data' undeclared (first use in this function)
   26 |  uint16_t len_of_data = strlen(user_data);
      |                                ^~~~~~~~~
../Core/Src/main.c:26:32: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:42:26: warning: implicit declaration of function 'convert_to_capital' [-Wimplicit-function-declaration]
   42 |    data_buffer[count++]= convert_to_capital(rcvd_data);
      |                          ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:82:9: error: conflicting types for 'convert_to_capital'
   82 | uint8_t convert_to_capital(uint8_t data)
      |         ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:42:26: note: previous implicit declaration of 'convert_to_capital' was here
   42 |    data_buffer[count++]= convert_to_capital(rcvd_data);
      |                          ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

11:08:36 Build Failed. 3 errors, 1 warnings. (took 317ms)

